$Id$

2014-06-16  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Seagate Laptop Thin HDD
	- Seagate Barracuda Green (AF): no warnings for newer firmware versions
	- Seagate Constellation.2 (SATA)
	- Seagate NAS HDD
	- Seagate Video 3.5 HDD

2014-06-15  Christian Franke  <franke@computer.org>

	drivedb.h, smartctl.8.in, smartd.8.in, INSTALL, NEWS, TODO, WARNINGS:
	Fix old Trac links.

2014-05-23 Alex Samorukov  <samm@os2.kiev.ua>

	os_freebsd.cpp: fixed #321 (compiler warning on 32 bit architectures),
	patch provided by tijl

2014-05-01  Christian Franke  <franke@computer.org>

	os_linux.cpp: Clarify copyright info in GPL header.
	smartctl.8.in, smartd.conf.5.in: Update '-d aacraid' info.

2014-04-30  Douglas Gilbert  <dgilbert@interlog.com>

	scsiprint.cpp:
	- Lowest aligned LBA > 0 not common so only output in that case

2014-04-28  Christian Franke  <franke@computer.org>

	autogen.sh: Allow automake 1.14, suppress 'subdir-objects' warning.
	Makefile.am: Add new 'compile' script to target 'maintainer-clean'.

2014-04-28  Douglas Gilbert  <dgilbert@interlog.com>

	scsicmds.h, scsicmds.cpp, scsiprint.h:
	- improve handling of modern SCSI disks (SAS SSDs)
	  show compliance (SCSI version), show 12 Gbps SAS-3
	  speed, and flag ZBC presence

2014-04-27  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h:
	- Toshiba 3.5" MG03ACAxxx(Y) Enterprise HDD

2014-04-27  Christian Franke  <franke@computer.org>

	Fixes for aacraid patch:
	aacraid.h: Fix typo which breaks 32-bit build.
	os_linux.cpp:  Remove useless member variable afd.
	Fix error handling of /proc/devices parsing.
	Avoid unsafe sprintf().  Fix help text.

2014-04-27  Raghava Aditya  <raghava.aditya@pmcs.com>

	os_linux.cpp:
	- Added support for aacraid drivers
	- Created a new interface for aacraid
	         smartctl -d aacraid,H,L,ID /dev/sdx

2014-04-18  Douglas Gilbert  <dgilbert@interlog.com>

	scsicmds.cpp:
	- supported_vpd_pages(): lower response length to stop sense data